# kernal-traffic-analyzer

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  start_kta.sh  ta_route_daemon.py
backend/: CMakeLists.txt
backend/include/: DpiEngine.h  FlowTracker.h  JsonExporter.h  PacketBackend.h
backend/src/: DpiEngine.cpp  FlowTracker.cpp  JsonExporter.cpp  PacketBackend.cpp  main.cpp
bpf/: kta_xdp_tc.bpf.c
daemon/: kta-route.service  requirements.txt  ta_route_daemon.py
docs/: IDS_Presentation.pptx  KTA_Thesis.docx  KTA_Thesis_Final-1.docx  KTA_Thesis_Final.docx  KTA_Thesis_Final_90.docx  KTA_v6_Presentation.pptx  ebpf_xdp_feature_stack.md  kta main one.pptx  lastestmasterprmpt.txt  major project  final thesis report.docx  major project presentatin.pptx  masterprompt.txt  offical major project thesis.odt  prompt.txt
gui/: CMakeLists.txt  main.cpp
gui/core/: AnomalyEntry.h  AnomalyModel.cpp  AnomalyModel.h  BandwidthThrottler.cpp  BandwidthThrottler.h  BgpMonitor.cpp  BgpMonitor.h  CostTracker.cpp  CostTracker.h  DnsEntry.h  DnsLeakDetector.cpp  DnsLeakDetector.h  DnsModel.cpp  DnsModel.h  Exporter.cpp  Exporter.h  FirewallManager.cpp  FirewallManager.h  HistoryDB.cpp  HistoryDB.h  ProcEntry.h  ProcModel.cpp  ProcModel.h  ProcReader.cpp  ProcReader.h  RouteEntry.h  RouteModel.cpp  RouteModel.h  ThreatIntel.cpp  ThreatIntel.h  TrafficEntry.h  TrafficModel.cpp  TrafficModel.h  TrustScorer.cpp  TrustScorer.h
gui/include/: Exporter.h  HistoryDB.h  MainWindow.h  ProcReader.h  Style.h
gui/include/delegates/: PerfBarDelegate.h  ProtoBadgeDelegate.h  RateBarDelegate.h  StateBadgeDelegate.h  TtlBarDelegate.h
gui/include/models/: AnomalyModel.h  DnsModel.h  ProcModel.h  RouteModel.h  TrafficModel.h
gui/include/tabs/: AnomalyTab.h  ConnectionsTab.h  DnsTab.h  HistoryTab.h  NetworkPerfTab.h  ProcessesTab.h  RoutesTab.h
gui/resources/: resources.qrc
gui/resources/style/: kta_dark.qss
gui/src/: Exporter.cpp  HistoryDB.cpp  MainWindow.cpp  ProcReader.cpp  main.cpp
gui/src/delegates/: PerfBarDelegate.cpp  ProtoBadgeDelegate.cpp  RateBarDelegate.cpp  StateBadgeDelegate.cpp  TtlBarDelegate.cpp
gui/src/models/: AnomalyModel.cpp  DnsModel.cpp  ProcModel.cpp  RouteModel.cpp  TrafficModel.cpp
gui/src/tabs/: AnomalyTab.cpp  ConnectionsTab.cpp  DnsTab.cpp  HistoryTab.cpp  NetworkPerfTab.cpp  ProcessesTab.cpp  RoutesTab.cpp
gui/ui/: AlertPopup.cpp  AlertPopup.h  AnomalyTab.cpp  AnomalyTab.h  BgpTab.cpp  BgpTab.h  ConnectionsTab.cpp  ConnectionsTab.h  CostTab.cpp  CostTab.h  DnsLeakTab.cpp  DnsLeakTab.h  DnsTab.cpp  DnsTab.h  FireWallTab.cpp  FireWallTab.h  HistoryTab.cpp  HistoryTab.h  LoadBalancerTab.cpp  LoadBalancerTab.h  MainWindow.cpp  MainWindow.h  NetworkPerfTab.cpp  NetworkPerfTab.h  ProcessDetailOverlay.cpp  ProcessDetailOverlay.h  ProcessesTab.cpp  ProcessesTab.h  RouteMapWidget.cpp  RouteMapWidget.h  RoutesTab.cpp  RoutesTab.h  Sidebar.cpp  Sidebar.h  SparklineDelegate.h  StatCard.cpp  StatCard.h  StatusBar.cpp  StatusBar.h  Style.h  (+10 more)
gui/ui/delegates/: ColorTextDelegate.cpp  ColorTextDelegate.h  MonoDelegate.cpp  MonoDelegate.h  PerfBarDelegate.cpp  PerfBarDelegate.h  ProtoBadgeDelegate.cpp  ProtoBadgeDelegate.h  RateBarDelegate.cpp  RateBarDelegate.h  StateBadgeDelegate.cpp  StateBadgeDelegate.h  TtlBarDelegate.cpp  TtlBarDelegate.h
kernel_module/: .Module.symvers.cmd  .modules.order.cmd  .traffic_analyzer.ko.cmd  .traffic_analyzer.mod.cmd  .traffic_analyzer.mod.o.cmd  .traffic_analyzer.o.cmd  Makefile  full_test  test_kernel_traffic_analyzer.sh
kernel_module/include/: cache.h  dns_map.h  dns_parser.h  exe_resolver.h  flow_cache.h  inode_cache.h  kta_api.h  kta_constants.h  kta_types.h  netlink_comm.h  resolver.h  route_store.h  sock_cache.h  traffic_analyzer.h
kernel_module/src/: .cache.o.cmd  .dns_map.o.cmd  .dns_parser.o.cmd  .exe_resolver.o.cmd  .flow_cache.o.cmd  .inode_cache.o.cmd  .module_main.o.cmd  .netfilter_hook.o.cmd  .netlink_comm.o.cmd  .packet_parser.o.cmd  .proc_interface.o.cmd  .resolver.o.cmd  .route_store.o.cmd  .sock_cache.o.cmd  .stats.o.cmd  cache.c  dns_map.c  dns_parser.c  exe_resolver.c  flow_cache.c  inode_cache.c  module_main.c  netfilter_hook.c  netlink_comm.c  packet_parser.c  proc_interface.c  resolver.c  route_store.c  sock_cache.c  stats.c
scripts/: check_deps.sh  install.sh  uninstall.sh
